DEV-386: Adding page break after every picture and adding filename inside word document. Fixed test.